//    Copyright 2019 Google Inc.
//
//    Licensed under the Apache License, Version 2.0 (the "License");
//    you may not use this file except in compliance with the License.
//    You may obtain a copy of the License at
//
//        https://www.apache.org/licenses/LICENSE-2.0
//
//    Unless required by applicable law or agreed to in writing, software
//    distributed under the License is distributed on an "AS IS" BASIS,
//    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//    See the License for the specific language governing permissions and
//    limitations under the License.

syntax = "proto3";

package google.fhir.r4.core;

import "google/protobuf/any.proto";
import "proto/annotations.proto";
import "proto/r4/core/codes.proto";
import "proto/r4/core/datatypes.proto";

option java_multiple_files = true;
option java_package = "com.google.fhir.r4.core";
option go_package = "github.com/google/fhir/go/proto/r4/core";
option (.google.fhir.proto.fhir_version) = R4;

// Auto-generated from StructureDefinition for EvidenceVariable, last updated
// 2019-11-01T09:29:23.356+11:00. A population, intervention, or exposure
// definition. See http://hl7.org/fhir/StructureDefinition/EvidenceVariable
message EvidenceVariable {
  option (.google.fhir.proto.structure_definition_kind) = KIND_RESOURCE;
  option (.google.fhir.proto.fhir_structure_definition_url) =
      "http://hl7.org/fhir/StructureDefinition/EvidenceVariable";
  option (.google.fhir.proto.fhir_path_message_constraint) =
      "name.matches('[A-Z]([A-Za-z0-9_]){0,254}')";

  // Logical id of this artifact
  Id id = 1;

  // Metadata about the resource
  Meta meta = 2;

  // A set of rules under which this content was created
  Uri implicit_rules = 3;

  // Language of the resource content
  Code language = 4;

  // Text summary of the resource, for human interpretation
  Narrative text = 5;

  // Contained, inline Resources
  repeated protobuf.Any contained = 6;

  // Field 7 reserved for strongly-typed ContainedResource for id:
  // EvidenceVariable.contained
  reserved 7;

  // Additional content defined by implementations
  repeated Extension extension = 8;

  // Extensions that cannot be ignored
  repeated Extension modifier_extension = 9;

  // Canonical identifier for this evidence variable, represented as a URI
  // (globally unique)
  Uri url = 10;

  // Additional identifier for the evidence variable
  repeated Identifier identifier = 11;

  // Business version of the evidence variable
  String version = 12;

  // Name for this evidence variable (computer friendly)
  String name = 13;

  // Name for this evidence variable (human friendly)
  String title = 14;

  // Title for use in informal contexts
  String short_title = 15;

  // Subordinate title of the EvidenceVariable
  String subtitle = 16;

  // draft | active | retired | unknown
  message StatusCode {
    option (.google.fhir.proto.structure_definition_kind) = KIND_PRIMITIVE_TYPE;
    option (.google.fhir.proto.fhir_valueset_url) =
        "http://hl7.org/fhir/ValueSet/publication-status";
    option (.google.fhir.proto.fhir_profile_base) =
        "http://hl7.org/fhir/StructureDefinition/code";

    PublicationStatusCode.Value value = 1;

    String id = 2;

    repeated Extension extension = 3;
  }
  StatusCode status = 17
      [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

  // Date last changed
  DateTime date = 18;

  // Name of the publisher (organization or individual)
  String publisher = 19;

  // Contact details for the publisher
  repeated ContactDetail contact = 20;

  // Natural language description of the evidence variable
  Markdown description = 21;

  // Used for footnotes or explanatory notes
  repeated Annotation note = 22;

  // The context that the content is intended to support
  repeated UsageContext use_context = 23;

  // Intended jurisdiction for evidence variable (if applicable)
  repeated CodeableConcept jurisdiction = 24;

  // Use and/or publishing restrictions
  Markdown copyright = 25;

  // When the evidence variable was approved by publisher
  Date approval_date = 26;

  // When the evidence variable was last reviewed
  Date last_review_date = 27;

  // When the evidence variable is expected to be used
  Period effective_period = 28;

  // The category of the EvidenceVariable, such as Education, Treatment,
  // Assessment, etc.
  repeated CodeableConcept topic = 29;

  // Who authored the content
  repeated ContactDetail author = 30;

  // Who edited the content
  repeated ContactDetail editor = 31;

  // Who reviewed the content
  repeated ContactDetail reviewer = 32;

  // Who endorsed the content
  repeated ContactDetail endorser = 33;

  // Additional documentation, citations, etc.
  repeated RelatedArtifact related_artifact = 34;

  // dichotomous | continuous | descriptive
  message TypeCode {
    option (.google.fhir.proto.structure_definition_kind) = KIND_PRIMITIVE_TYPE;
    option (.google.fhir.proto.fhir_valueset_url) =
        "http://hl7.org/fhir/ValueSet/variable-type";
    option (.google.fhir.proto.fhir_profile_base) =
        "http://hl7.org/fhir/StructureDefinition/code";

    EvidenceVariableTypeCode.Value value = 1;

    String id = 2;

    repeated Extension extension = 3;
  }
  TypeCode type = 35;

  // What defines the members of the evidence element
  message Characteristic {
    // Unique id for inter-element referencing
    String id = 1;

    // Additional content defined by implementations
    repeated Extension extension = 2;

    // Extensions that cannot be ignored even if unrecognized
    repeated Extension modifier_extension = 3;

    // Natural language description of the characteristic
    String description = 4;

    // What code or expression defines members?
    message DefinitionX {
      option (.google.fhir.proto.is_choice_type) = true;

      oneof choice {
        Reference reference = 1
            [(.google.fhir.proto.valid_reference_type) = "Group"];
        Canonical canonical = 2;
        CodeableConcept codeable_concept = 3;
        Expression expression = 4;
        DataRequirement data_requirement = 5;
        TriggerDefinition trigger_definition = 6;
      }
    }
    DefinitionX definition = 5
        [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

    // What code/value pairs define members?
    repeated UsageContext usage_context = 6;

    // Whether the characteristic includes or excludes members
    Boolean exclude = 7;

    // What time period do participants cover
    message ParticipantEffectiveX {
      option (.google.fhir.proto.is_choice_type) = true;

      oneof choice {
        DateTime date_time = 1;
        Period period = 2;
        Duration duration = 3;
        Timing timing = 4;
      }
    }
    ParticipantEffectiveX participant_effective = 8;

    // Observation time from study start
    Duration time_from_start = 9;

    // mean | median | mean-of-mean | mean-of-median | median-of-mean |
    // median-of-median
    message GroupMeasureCode {
      option (.google.fhir.proto.structure_definition_kind) =
          KIND_PRIMITIVE_TYPE;
      option (.google.fhir.proto.fhir_valueset_url) =
          "http://hl7.org/fhir/ValueSet/group-measure";
      option (.google.fhir.proto.fhir_profile_base) =
          "http://hl7.org/fhir/StructureDefinition/code";

      .google.fhir.r4.core.GroupMeasureCode.Value value = 1;

      String id = 2;

      repeated Extension extension = 3;
    }
    GroupMeasureCode group_measure = 10;
  }
  repeated Characteristic characteristic = 36
      [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];
}
